--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/StudentManagement
 spring.datasource.username=root
 spring.datasource.password=syana0806
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Mybatis???
 mybatis.configuration.map-underscore-to-camel-case=true
-
+mybatis.mapper-locations=classpath*:/mapper/*.xml
